--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ __pycache__/
 # C extensions
 *.so
 
-<<<<<<< HEAD
-=======
 # virtualenv
 bin/
 
@@ -16,7 +14,6 @@ flask_session/
 
 .envrc
 
->>>>>>> master
 # Distribution / packaging
 .Python
 build/
@@ -27,20 +24,17 @@ eggs/
 .eggs/
 lib/
 lib64/
-<<<<<<< HEAD
 parts/
 sdist/
 var/
 wheels/
 pip-wheel-metadata/
-=======
 parts/  
 sdist/
 var/
 wheels/
->>>>>>> master
 share/python-wheels/
-*.egg-info/
+i*.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
@@ -68,10 +62,6 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
-<<<<<<< HEAD
-=======
-cover/
->>>>>>> master
 
 # Translations
 *.mo
@@ -94,10 +84,7 @@ instance/
 docs/_build/
 
 # PyBuilder
-<<<<<<< HEAD
-=======
 .pybuilder/
->>>>>>> master
 target/
 
 # Jupyter Notebook
@@ -108,13 +95,7 @@ profile_default/
 ipython_config.py
 
 # pyenv
-<<<<<<< HEAD
 .python-version
-=======
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
->>>>>>> master
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -159,12 +140,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-<<<<<<< HEAD
-=======
 
 # pytype static type analyzer
 .pytype/
 
 # Cython debug symbols
 cython_debug/
->>>>>>> master
