--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,17 @@
-appdirs==1.4.4
-asgiref==3.3.1
-attrs==20.3.0
-Automat==20.2.0
-autopep8==1.5.5
 bcrypt==3.2.0
-beautifulsoup4==4.9.3
-blinker==1.4
 cachelib==0.1.1
-certifi==2020.12.5
 cffi==1.14.5
-chardet==4.0.0
-check50==3.2.2
 click==7.1.2
-cloud-init==20.4
-colorama==0.4.4
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
 cryptography==3.4.6
-cs50==6.0.2
-cupshelpers==1.0
-cycler==0.10.0
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.1
-distro==1.5.0
-distro-info==0.0.0
-entrypoints==0.3
-evdev==1.4.0
-filelock==3.0.12
-flake8==3.8.4
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
-Flask-Login==0.5.0
 Flask-Session==0.3.2
-greenlet==1.0.0
-gunicorn==20.0.4
-httplib2==0.19.0
-hyperlink==21.0.0
-idna==2.10
-importlib-metadata==3.7.2
-incremental==21.3.0
+Flask-SQLAlchemy==2.4.4
 itsdangerous==1.1.0
-jeepney==0.6.0
-jellyfish==0.8.2
 Jinja2==2.11.3
-jsonpatch==1.31
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==23.0.0
-kiwisolver==1.3.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.3
-lazr.uri==1.0.5
-lib50==2.0.9
-macaroonbakery==1.3.1
 MarkupSafe==1.1.1
-matplotlib==3.3.4
-mccabe==0.6.1
-more-itertools==8.7.0
-MouseInfo==0.1.3
-msgpack==1.0.2
-netifaces==0.10.9
-numpy==1.20.1
-oauthlib==3.1.0
-pbr==5.5.1
-pexpect==4.8.0
-Pillow==8.1.2
-protobuf==3.15.5
-psutil==5.8.0
 psycopg2-binary==2.8.6
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAutoGUI==0.9.52
-pycairo==1.16.2
-pycodestyle==2.6.0
 pycparser==2.20
-pycups==1.9.73
-pyflakes==2.2.0
-PyGetWindow==0.0.9
-Pygments==2.8.1
-PyGObject==3.36.0
-PyHamcrest==2.0.2
-PyJWT==2.0.1
-pymacaroons==0.13.0
-PyMsgBox==1.0.9
-PyNaCl==1.4.0
-pynput==1.7.3
-pynvim==0.4.3
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pyperclip==1.8.2
-PyRect==0.1.4
-pyRFC3339==1.1
-pyrsistent==0.17.3
-PyScreeze==0.1.26
-pyserial==3.5
-python-apt==2.0.0+ubuntu0.20.4.4
-python-dateutil==2.8.1
-python-debian==0.1.39
-python-xlib==0.29
-python3-xlib==0.15
-PyTweening==1.0.3
-pytz==2021.1
-pyxdg==0.27
-PyYAML==5.4.1
-requests==2.25.1
-requests-unixsocket==0.2.0
-rope==0.18.0
-SecretStorage==3.3.1
-service-identity==18.1.0
-simplejson==3.17.2
 six==1.15.0
-sos==4.0
-soupsieve==2.2
 SQLAlchemy==1.3.23
-sqlparse==0.4.1
-ssh-import-id==5.11
-submit50==3.0.3
-systemd-python==234
-termcolor==1.1.0
-testresources==2.0.1
-toml==0.10.2
-Twisted==21.2.0
-ubuntu-advantage-tools==20.3
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.26.3
-virtualenv==20.4.2
-wadllib==1.3.5
 Werkzeug==1.0.1
-zipp==3.4.1
-zope.interface==5.2.0
