--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Session==0.3.2
 Flask-SQLAlchemy==2.4.4
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
