--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==7.1.2
 cryptography==3.4.6
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.10
 Flask-Session==0.3.2
 Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
